# ilsangisang-test

./: .dev.vars.example  .env.example  .gitignore  SUPABASE_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
.github/workflows/: desktop.yml
assets/: index-4V3KsVpo.css  index-4awWhDDG.css  index-7N8W4jYI.js  index-B2AuR5XS.js  index-BDsyyKd9.js  index-BNheJhYc.js  index-BX1MD8MH.css  index-Br0tjaOq.css  index-BzPvZLx3.js  index-C1KLOrfU.css  index-C1vTVp-s.js  index-C3wIb27k.css  index-C4E4TMqA.js  index-C4E8W7Zc.js  index-C50cnofD.js  index-C9WrhibN.css  index-CEqSY1Ja.js  index-CQ0F2Hv0.js  index-CQoe75AA.js  index-CikZ3DC_.js  index-CtecE4Lb.js  index-Cy_PtbSQ.css  index-D-puzwPW.css  index-D2q7GfoE.js  index-DB_KHSGG.css  index-DV0vrfSV.js  index-DXvUGGMW.css  index-DXvczYRx.js  index-DhsC3XuR.css  index-DkxcVdvC.css  index-Dr-JzPEP.css  index-Dv0hJdHU.css  index-DzUYa4RK.js  index-F9-ajhMh.js  index-K0c03tSO.js  index-VqblKw_k.js  index-WHyExjAa.js  index-WwDF6FD3.js  index-ftQ0d5b3.js  index-jyJo9gIA.css  (+3 more)
functions/api/: _searchad.ts  ai-assistant.ts  ai-handover.ts  ai-image.ts  ai-insight.ts  ai-monthly-summary.ts  ai-plan.ts  ai-schedule.ts  ai-summary.ts  ai-vendor.ts  longtail-expand.ts  naver-keywords.ts  pricing-scrape.ts  (+1 more)
public/: manifest.webmanifest  sw.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .updater-private-key  .updater-private-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs
(+131 files in other folders)
