[package]
name = "ilsangisang"
version = "0.1.0"
description = "일상이상 커뮤니케이션 데스크톱"
authors = ["ilsangisang"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 내장 브라우저 화면 캡처(전체/영역/스크롤) 용
xcap = "0.0"            # OS 창 캡처(크로스플랫폼)
image = "0.24"          # PNG 인코딩 · 스크롤 이어붙이기 (xcap 이 쓰는 image 버전과 일치시켜 타입충돌 방지)
base64 = "0.22"         # 캡처 이미지를 프런트(웹뷰)로 주고받기
